# joyeer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  xcode-gen.sh
bootstrap/: Package.swift  README.md
bootstrap/Sources/joyeer/: Keyword.swift  Lexer.swift  StringReader.swift  Token.swift  main.swift
bootstrap/Tests/: LinuxMain.swift
bootstrap/Tests/joyeerTests/: JoyeerTests.swift
compiler/: CMakeLists.txt  IRGen.cpp  IRGen.h  binder.cpp  binder.h  compileopts.cpp  compileopts.h  context.cpp  context.h  diagnostic.cpp  diagnostic.h  keyword.cpp  keyword.h  lexer.cpp  lexer.h  lexparser.cpp  lexparser.h  node.cpp  node.h  program.cpp  program.h  scope.cpp  scope.h  sourcefile.cpp  sourcefile.h  symtable.cpp  symtable.h  syntaxparser.cpp  syntaxparser.h  token.cpp  token.h  typecheck.cpp  typecheck.h  types.cpp  types.h
compiler/AST/: CMakeLists.txt  ast.h  decl.cpp  decl.h  expression.cpp  expression.h  node.cpp  node.h  statement.cpp  statement.h
compiler/lexer/: CMakeLists.txt  keyword.cpp  keyword.h  lexer.h  lexparser.cpp  lexparser.h  token.h
compiler/syntax/: CMakeLists.txt  binder.cpp  binder.h  symtable.cpp  symtable.h  syntax.cpp  syntax.h  syntaxparser.cpp  syntaxparser.h  types.cpp  types.h
docs/: grammar.md  instructions.md  optional.md
include/: CMakeLists.txt
include/joyeer/common/: arguments.h  descriptor.h  types.h
include/joyeer/compiler/: IRGen.h  binder.h  compileopts.h  compiler+request.h  compiler+service.h  compilerservice.h  context.h  debugprinter.h  diagnostic.h  lexparser.h  location.h  memory+alignment.h  node+debugprinter.h  node+expr.h  node+stmt.h  node+types.h  node+visitor.h  node.h  opcode.h  program.h  request.h  signature.h  sourcefile.h  symbol+repo.h  symtable.h  syntaxparser.h  token.h  typebinding.h  typecheck.h  typedef.h  (+1 more)
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  arguments.cpp  descriptor.cpp  diagnostic.cpp  types.cpp
lib/compiler/: CMakeLists.txt  IRGen.cpp  binder.cpp  compileopts.cpp  compiler+service.cpp  context.cpp  debugprinter.cpp  debugprinter.h  diagnostic.cpp  lexparser.cpp  memory+alignment.cpp  node+debugprinter.cpp  node+expr.cpp  node+stmt.cpp  node+types.cpp  node+visitor.cpp  node.cpp  opcode.cpp  program.cpp  sourcefile.cpp  symtable.cpp  syntaxparser.cpp  token.cpp  typebinding.cpp  typecheck.cpp  typedef.cpp  typegen.cpp
lib/diagnostic/: CMakeLists.txt  diagnostic.cpp
lib/driver/: CMakeLists.txt  arguments.cpp  driver.cpp
lib/main/: CMakeLists.txt  driver.cpp  driver.h  main.cpp
lib/runtime/: CMakeLists.txt  arguments.cpp  buildin.cpp  bytecode.cpp  descriptor.cpp  diagnostic.cpp  executor.cpp  function.cpp  gc.cpp  heaps.cpp  instruction.cpp  interpreter.cpp  isolate+vm.cpp  loader.cpp  memory.cpp  object.cpp  res+table.cpp  runtime.cpp  sys+debugger.cpp  sys.cpp  types.cpp
lib/stdlib/: CMakeLists.txt  print.cpp
lib/vm/: CMakeLists.txt  bytecode.cpp  code.cpp  compiler.cpp  context.cpp  frame.cpp  gc.cpp  heaps.cpp  interpreter.cpp  isolate.cpp  loader.cpp  memory.cpp  object.cpp  res+table.cpp  stdlib.cpp  stringtable.cpp  types.cpp
runtime/: CMakeLists.txt  array.cpp  array.h  buildin.cpp  buildin.h  function.cpp  function.h  gc.cpp  gc.h  instruction.cpp  instruction.h  interpreter.cpp  interpreter.h  method.h  object.cpp  object.h  runtime.cpp  runtime.h
runtime/sys/: array.cpp  array.h  map.cpp  map.h  module.cpp  module.h  print.cpp  print.h  string.cpp  string.h
scripts/: xcode-gen.sh
scripts/cmake/: addJoyeer.cmake  addLibrary.cmake
src/: CMakeLists.txt  driver.cpp  driver.h
src/compiler/: IRGen.cpp  IRGen.h  compiler+service.cpp  compiler+service.h  context.cpp  context.h  debugprinter.cpp  debugprinter.h  lexparser.cpp  lexparser.h  node+visitor.cpp  node+visitor.h  node.cpp  node.h  sourcefile.cpp  sourcefile.h  symtable.cpp  symtable.h  syntaxparser.cpp  syntaxparser.h  token.cpp  token.h  typebinding.cpp  typebinding.h  typegen.cpp  typegen.h
src/diagnostic/: diagnostic.cpp  diagnostic.h
src/runtime/: arguments.cpp  arguments.h  bytecode.cpp  bytecode.h  descriptor.cpp  descriptor.h  executor.h  gc.cpp  gc.h  heaps.cpp  heaps.h  isolate+vm.cpp  isolate+vm.h  loader.cpp  loader.h  memory.cpp  memory.h  res+table.cpp  res+table.h  sys.cpp  sys.h  types.cpp  types.h
src/vm/: frame.cpp  frame.h  interpreter.cpp  interpreter.h  isolate.cpp  isolate.h
tests/: CMakeLists.txt  list.joyeer  testRunner.py
tests/basis/: 000.joyeer  001.joyeer  001.joyeer.result.txt  003.joyeer  003.joyeer.result.txt  004.joyeer  005.joyeer  005.joyeer.result.txt  006.joyeer  006.joyeer.result.txt  007.joyeer  008.joyeer  009.joyeer  009.joyeer.result.txt  010.joyeer  array_01.joyeer  class_01.joyeer  class_01.joyeer.result.txt  class_02.joyeer  class_02.joyeer.result.txt  class_03.joyeer  dict_01.joyeer  dict_01.joyeer.result.txt  dict_02.joyeer  func_return_value.joyeer  optional_001.joyeer  optional_01.joyeer  optional_02.joyeer  string_01.joyeer  string_01.joyeer.result.txt  while_01.joyeer  while_01.joyeer.result.txt
tests/basis/dictionary/: 01.joyeer
tests/debug-printer/: empty_module_frames.joyeer  empty_module_frames.joyeer.result.txt  empty_module_memory.joyeer
tests/errors/: ccomment_01.joyeer  ccomment_01.joyeer.result.txt  ccomment_02.joyeer  class_dup.joyeer  class_dup.joyeer.result.txt  func_miss_name.joyeer  func_miss_name.joyeer.result.txt  func_notfound_001.joyeer  func_notfound_001.joyeer.result.txt  octal_number.joyeer  octal_number.joyeer.result.txt  optional_01.joyeer  optional_01.joyeer.result.txt  optional_02.joyeer  optional_02.joyeer.result.txt  string_01.joyeer  string_01.joyeer.result.txt
tests/expr/: 000.joyeer  001.joyeer  001.joyeer.result.txt  002.joyeer  003.joyeer  004.joyeer  100.joyeer  100.joyeer.result.txt
tests/leetcode/: 0001.joyeer  0002.joyeer  0002.joyeer.result.txt  0003.joyeer  001.joyeer  list.joyeer  quick_sort.joyeer  quick_sort.joyeer.result.txt
tests/testcases/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/testcases/: CMakeLists.txt  common_descriptor_test.cpp  heaps_test.cpp
(+54 files in other folders)
